// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cognito mappings > Should map AWS::Cognito::IdentityPool 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_cognito_identity_pool": {
      "resource_22C949BF": {
        "allow_classic_flow": true,
        "allow_unauthenticated_identities": true,
        "cognito_identity_providers": [
          {
            "client_id": "client-id",
            "provider_name": "provider-name",
            "server_side_token_check": true
          }
        ],
        "developer_provider_name": "developer-provider-name",
        "identity_pool_name": "identity-pool-name",
        "openid_connect_provider_arns": [
          "open-id-connect-provider-arn"
        ],
        "saml_provider_arns": [
          "saml-provider-arn"
        ],
        "supported_login_providers": {
          "login-provider": "login-provider"
        },
        "tags": {
          "key": "value"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.85.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${join(\\"\\", [aws_cognito_identity_pool.resource_22C949BF.id, \\",\\", aws_cognito_identity_pool.resource_22C949BF.identity_pool_name])}",
      "type": "string"
    }
  }
}"
`;

exports[`Cognito mappings > Should map AWS::Cognito::IdentityPoolRoleAttachment 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_cognito_identity_pool_roles_attachment": {
      "resource_22C949BF": {
        "identity_pool_id": "identity-pool-id",
        "role_mapping": [
          {
            "ambiguous_role_resolution": "AuthenticatedRole",
            "identity_provider": "cognito-idp",
            "mapping_rule": [
              {
                "claim": "claim",
                "match_type": "Equals",
                "role_arn": "role-arn",
                "value": "value"
              }
            ],
            "type": "Token"
          }
        ],
        "roles": {
          "authenticated": "authenticated-role",
          "unauthenticated": "unauthenticated-role"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.85.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${aws_cognito_identity_pool_roles_attachment.resource_22C949BF.id}",
      "type": "string"
    }
  }
}"
`;

exports[`Cognito mappings > Should map AWS::Cognito::UserPool 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_cognito_user_pool": {
      "resource_22C949BF": {
        "account_recovery_setting": {
          "recovery_mechanism": [
            {
              "name": "name",
              "priority": 60
            }
          ]
        },
        "admin_create_user_config": {
          "allow_admin_create_user_only": true,
          "invite_message_template": {
            "email_message": "email-message",
            "email_subject": "email-subject",
            "sms_message": "sms-message"
          }
        },
        "alias_attributes": [
          "email"
        ],
        "auto_verified_attributes": [
          "email"
        ],
        "deletion_protection": "true",
        "device_configuration": {
          "challenge_required_on_new_device": true,
          "device_only_remembered_on_user_prompt": true
        },
        "email_configuration": {
          "configuration_set": "configuration-set",
          "email_sending_account": "COGNITO_DEFAULT",
          "from_email_address": "from",
          "reply_to_email_address": "reply-to-email-address",
          "source_arn": "source-arn"
        },
        "email_mfa_configuration": {
          "message": "email-authentication-message",
          "subject": "email-authentication-subject"
        },
        "email_verification_message": "email-verification-message",
        "email_verification_subject": "email-verification-subject",
        "lambda_config": {
          "create_auth_challenge": "create-auth-challenge",
          "custom_email_sender": {
            "lambda_arn": "lambda-arn",
            "lambda_version": "lambda-version"
          },
          "custom_message": "custom-message",
          "custom_sms_sender": {
            "lambda_arn": "lambda-arn",
            "lambda_version": "lambda-version"
          },
          "define_auth_challenge": "define-auth-challenge",
          "kms_key_id": "kms-key-id",
          "post_authentication": "post-authentication",
          "post_confirmation": "post-confirmation",
          "pre_authentication": "pre-authentication",
          "pre_sign_up": "pre-sign-up",
          "pre_token_generation": "pre-token-generation",
          "pre_token_generation_config": {
            "lambda_arn": "lambda-arn",
            "lambda_version": "lambda-version"
          },
          "user_migration": "user-migration",
          "verify_auth_challenge_response": "verify-auth-challenge-response"
        },
        "mfa_configuration": "ON",
        "name": "user-pool-name",
        "password_policy": {
          "minimum_length": 60,
          "password_history_size": 60,
          "require_lowercase": true,
          "require_numbers": true,
          "require_symbols": true,
          "require_uppercase": true,
          "temporary_password_validity_days": 60
        },
        "schema": [
          {
            "attribute_data_type": "String",
            "developer_only_attribute": false,
            "mutable": true,
            "name": "name",
            "number_attribute_constraints": {
              "max_value": "max-value",
              "min_value": "min-value"
            },
            "required": true,
            "string_attribute_constraints": {
              "max_length": "max-length",
              "min_length": "min-length"
            }
          }
        ],
        "sign_in_policy": {
          "allowed_first_auth_factors": [
            "SMS"
          ]
        },
        "sms_authentication_message": "sms-authentication-message",
        "sms_configuration": {
          "external_id": "external-id",
          "sns_caller_arn": "sns-caller-arn",
          "sns_region": "sns-region"
        },
        "software_token_mfa_configuration": {
          "enabled": false
        },
        "tags": {
          "user-pool-tag": "user-pool-tag"
        },
        "user_attribute_update_settings": {
          "attributes_require_verification_before_update": [
            "email"
          ]
        },
        "user_pool_add_ons": {
          "advanced_security_mode": "OFF"
        },
        "user_pool_tier": "STANDARD",
        "username_attributes": [
          "email"
        ],
        "username_configuration": {
          "case_sensitive": true
        },
        "verification_message_template": {
          "default_email_option": "CONFIRM_WITH_CODE",
          "email_message": "email-message",
          "email_message_by_link": "email-message-by-link",
          "email_subject": "email-subject",
          "email_subject_by_link": "email-subject-by-link",
          "sms_message": "sms-message"
        },
        "web_authn_configuration": {
          "relying_party_id": "web-authn-relying-party-id",
          "user_verification": "required"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.85.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${join(\\"\\", [aws_cognito_user_pool.resource_22C949BF.arn, \\",\\", aws_cognito_user_pool.resource_22C949BF.endpoint, \\",\\", \\"https://\${aws_cognito_user_pool.resource_22C949BF.endpoint}\\", \\",\\", aws_cognito_user_pool.resource_22C949BF.id])}",
      "type": "string"
    }
  }
}"
`;

exports[`Cognito mappings > Should map AWS::Cognito::UserPoolClient 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_cognito_user_pool_client": {
      "resource_22C949BF": {
        "access_token_validity": 60,
        "allowed_oauth_flows": [
          "code"
        ],
        "allowed_oauth_flows_user_pool_client": true,
        "allowed_oauth_scopes": [
          "email"
        ],
        "analytics_configuration": [
          {
            "application_arn": "application-arn",
            "application_id": "application-id",
            "external_id": "external-id",
            "role_arn": "role-arn",
            "user_data_shared": true
          }
        ],
        "auth_session_validity": 60,
        "callback_urls": [
          "callback-url"
        ],
        "default_redirect_uri": "default-redirect-uri",
        "enable_propagate_additional_user_context_data": true,
        "enable_token_revocation": true,
        "explicit_auth_flows": [
          "USER_PASSWORD_AUTH"
        ],
        "generate_secret": true,
        "id_token_validity": 60,
        "logout_urls": [
          "logout-url"
        ],
        "name": "client-name",
        "prevent_user_existence_errors": "ENABLED",
        "read_attributes": [
          "email"
        ],
        "refresh_token_validity": 60,
        "supported_identity_providers": [
          "COGNITO"
        ],
        "token_validity_units": [
          {
            "access_token": "seconds",
            "id_token": "seconds",
            "refresh_token": "seconds"
          }
        ],
        "user_pool_id": "user-pool-id",
        "write_attributes": [
          "email"
        ]
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.85.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${join(\\"\\", [aws_cognito_user_pool_client.resource_22C949BF.id, \\",\\", aws_cognito_user_pool_client.resource_22C949BF.client_secret, \\",\\", aws_cognito_user_pool_client.resource_22C949BF.name])}",
      "type": "string"
    }
  }
}"
`;

exports[`Cognito mappings > Should map AWS::Cognito::UserPoolDomain 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_cognito_user_pool_domain": {
      "resource_22C949BF": {
        "certificate_arn": "SomeArn",
        "domain": "auth.example.com",
        "user_pool_id": "userPoolId"
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.85.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${join(\\"\\", [aws_cognito_user_pool_domain.resource_22C949BF.cloudfront_distribution, \\",\\", aws_cognito_user_pool_domain.resource_22C949BF.id])}",
      "type": "string"
    }
  }
}"
`;
